--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -16,22 +16,24 @@
   </style>
 </head>
 <body>
-  <div class="conatainerImg">
-    <img src="assets/images/illustration-article.svg" alt="illustration-article">
-  </div>
+  <div class="containerPreview">
+  
+    <div class="conatainerImg">
+      <img src="assets/images/illustration-article.svg" alt="illustration-article">
+    </div>
+    <h2 class="subtitle">Learning</h2>
 
-  <h2>Learning</h2>
-
-  <p>Published 21 Dec 2023</p>
-
-  <h1>HTML & CSS foundations</h1>
-
-  <p class="descTitle">These languages are the backbone of every website, defining structure, content, and presentation.</p>
-
-  <div class="containerProfile">
-    <img src="assets/images/image-avatar.webp" alt="Greg Hooper">
-    <h2>Greg Hooper</h2>
-  </div>
+    <p>Published 21 Dec 2023</p>
+  
+    <h1>HTML & CSS foundations</h1>
+  
+    <p class="descTitle">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+  
+    <div class="containerProfile">
+      <img src="assets/images/image-avatar.webp" alt="Greg Hooper">
+      <h3>Greg Hooper</h3>
+    </div>
+</div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
